--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.4.5",
+    "less": "^3.8.0",
+    "lrz": "^4.9.40",
     "pinyin": "^2.8.3",
     "v-distpicker": "^1.0.17",
     "vue": "^2.5.2",
+    "vue-core-image-upload": "^2.4.11",
     "vue-easy-uploader": "^1.0.5",
     "vue-photo-preview": "^1.0.9",
     "vue-pickers": "^1.1.4",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vue-upload-component": "^2.8.10",
+    "vue-upload-component": "^2.8.11",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -27,6 +31,7 @@
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
@@ -36,7 +41,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
+    "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^2.2.4",
@@ -75,5 +80,16 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "main": ".postcssrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zhanghslq/vueApp.git"
+  },
+  "keywords": [],
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zhanghslq/vueApp/issues"
+  },
+  "homepage": "https://github.com/zhanghslq/vueApp#readme"
 }
