--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
     "swiper": "^4.0.7",
     "v-distpicker": "^1.0.17",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-core-image-upload": "^2.4.11",
     "vue-easy-uploader": "^1.0.5",
+    "vue-layer": "^0.9.9",
+    "vue-layer-mobile": "^1.2.0",
     "vue-photo-preview": "^1.0.9",
     "vue-pickers": "^1.1.4",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vue-upload-component": "^2.8.11",
-    "vuex": "^3.0.1"
+    "vue-upload-component": "^2.8.11"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -67,6 +69,7 @@
     "vue-scroller": "^2.2.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vuex": "^3.0.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
