--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.4.5",
     "less": "^3.8.0",
     "lrz": "^4.9.40",
+    "mint-ui": "^2.2.13",
     "pinyin": "^2.8.3",
     "swiper": "^4.0.7",
     "v-distpicker": "^1.0.17",
