--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-pickers": "^1.1.4",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
+    "vue-touch-slider": "^2.0.2",
     "vue-upload-component": "^2.8.11"
   },
   "devDependencies": {
