--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-touch-slider": "^2.0.2",
-    "vue-upload-component": "^2.8.11"
+    "vue-upload-component": "^2.8.11",
+    "vue-validator": "^3.0.0-alpha.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
