--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less": "^3.8.0",
     "lrz": "^4.9.40",
     "mint-ui": "^2.2.13",
+    "mui": "0.0.1",
     "pinyin": "^2.8.3",
     "swiper": "^4.0.7",
     "v-distpicker": "^1.0.17",
